k8s-specifications/mongo_db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: voter-ns
spec:
  ports:
  - port: 27017
  selector:
    app: mongo
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voter-ns
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: voter-ns
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:3.7
        name: mongo
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
      volumes:
      - name: mongo-persistent-storage
        persistentVolumeClaim:
          claimName: mongo-pv-claim
