k8s-specifications/postgresql_db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: voter-ns
spec:
  ports:
  - port: 5432
  selector:
    app: postgresql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: voter-ns
  name: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: voter-ns
      labels:
        app: postgresql
    spec:
      containers:
      - image: postgres:10.3
        name: postgresql
        ports:
        - containerPort: 3306
          name: postgresql
        volumeMounts:
        - name: postgresql-persistent-storage
          mountPath: /var/lib/mysql
        - name: postgresql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgresql-persistent-storage
        persistentVolumeClaim:
          claimName: postgresql-pv-claim
      - name: postgresql-initdb
        configMap:
          name: postgresql-initdb-config
