k8s-specifications/result_app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: result-app
  namespace: voter-ns
spec:
  selector:
    app: result-app
  type: NodePort
  ports:
  - name: "result-app"
    port: 8080
    nodePort: 30180
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: voter-ns
  name: result-app
spec:
  selector:
    matchLabels:
      app: result-app
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: voter-ns
      labels:
        app: result-app
    spec:
      containers:
      - image: olias/result-app:v1
        imagePullPolicy: Always
        name: result-app
        ports:
        - containerPort: 8080
          name: result-app
